--- a/style.css
+++ b/style.css
@@ -3,9 +3,64 @@
     --white-color: #fff;
     --grey-color: #e2e8f0;
     --gold-color: #F0B429;
+    font-size: 62.5%;
+    font-family: "Roboto", sans-serif;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .overall-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    height: 100vh;
+}
+
+.sidebar {
+    background-color: var(--bleu-color);
+    color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    padding: 1.5rem 1.5rem;
+
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    gap: 1rem;
+    font-weight: bold;
+}
+
+.logo svg {
+    width: 50px;
+    fill: var(--white-color);
+}
+
+.main-navigations,
+.extra-navigations {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 85%;
+    margin: 0 auto;
+
+}
+
+.nav-element {
+    display: flex;
+    align-items: center;
+    font-size: 1.6rem;
+    gap: 1rem;
+    font-weight: bold;
+}
+
+.nav-element svg {
+    width: 25px;
+    fill: var(--white-color);
 }
