Fix images not working properly

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ svg {
 .overall-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    height: 100vh;
 }
 
 /* The sidebar styling */
